tests/type-errors/no_read_global_shadow_var.arl
archetype no_read_global_shadow_var

entry exec () {
  effect {
    do_require(myvar = 0, "ko")
  }
}

specification {
  variable myvar : int = 1
}
